cluster-aggregator/src/section/snapshots/cluster_aggregator__section__pod__tests__kube_pod_conditions_v1_ignores_unknown_condition_types.snap
---
source: cluster-aggregator/src/section/pod.rs
expression: "KubePodConditionsV1::from_pod(&pod)"
---
{
  "initialized": null,
  "hasnetwork": null,
  "readytostartcontainers": null,
  "scheduled": {
    "status": "True",
    "reason": "",
    "detail": "",
    "last_transition_time": 1718824965
  },
  "containersready": null,
  "ready": null,
  "disruptiontarget": null,
  "resizepending": null,
  "resizeinprogress": null,
  "allcontainersrestarting": null
}
