cluster-aggregator/src/section/snapshots/cluster_aggregator__section__pod__tests__kube_pod_init_container_specs_v1.snap
---
source: cluster-aggregator/src/section/pod.rs
expression: "KubePodInitContainerSpecsV1::from_pod(&pod)"
---
{
  "containers": {
    "init-a": {
      "image_pull_policy": "Always"
    },
    "init-b": {
      "image_pull_policy": "IfNotPresent"
    }
  }
}
