cluster-aggregator/src/section/snapshots/cluster_aggregator__section__pod__tests__kube_pod_lifecycle_v1.snap
---
source: cluster-aggregator/src/section/pod.rs
expression: "KubePodLifecycleV1::new(\"Pending\")"
---
{
  "phase": "pending"
}
