cluster-aggregator/src/section/snapshots/cluster_aggregator__section__pod__tests__kube_pod_resources_v1.snap
---
source: cluster-aggregator/src/section/pod.rs
expression: section
---
{
  "running": [
    "running-pod",
    "running-2-pod"
  ],
  "pending": [
    "pending-pod"
  ],
  "succeeded": [
    "succeeded-pod"
  ],
  "failed": [
    "failed-pod",
    "failed-2-pod"
  ],
  "unknown": [
    "no-phase-pod"
  ]
}
