cluster-aggregator/src/section/snapshots/cluster_aggregator__section__pod__tests__kube_start_time_v1.snap
---
source: cluster-aggregator/src/section/pod.rs
expression: section
---
{
  "start_time": 1718825025.0
}
